--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.544.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-scripts": "5.0.1"
   }
 }
